--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/dist/styles.css">
+    <link rel="stylesheet"  href="{{ url_for('static', filename='css/dist/styles.css') }}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <title>Home Page</title>
 </head>
-<body>
-    <h1 class="text-3xl font-bold underline">
-        Hello, world!
-    </h1>
+<body class="flex flex-col min-h-screen">
+    {% include '_header.html' %}
+
+    <div class="my-auto">
+
+        <h1 class="mb-4 text-3xl text-center font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl">
+            Welcome to 
+            <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">«Zlagoda»</span>
+            supermarket.
+        </h1>
+        <p class="text-lg text-center font-normal text-gray-500 lg:text-xl dark:text-gray-400">
+            Development of AIS to regulate the operation of the grocery mini-supermarket "ZLAGODA":
+            management of the sales process of goods in a grocery mini-supermarket.
+        </p>
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 </body>
 </html>
