--- a/app/templates/_header.html
+++ b/app/templates/_header.html
@@ -13,16 +13,35 @@
     <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
       <ul class="flex flex-col text-2xl font-medium mt-4 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
         <li>
-          <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent" aria-current="page">Home</a>
+          <a href="{{ url_for('main.home') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded
+           hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
+            md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+             aria-current="page">
+            Home
+          </a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
+          <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100
+          md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-blue-500
+          dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+            Pricing
+          </a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+          <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
+          md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
+          md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white 
+          md:dark:hover:bg-transparent">
+           Contact
+          </a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3 ml-12 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Log in</a>
+          <a href="{{ url_for('main.login') }}" class="block py-2 px-3 ml-12 md:p-0 text-gray-900 rounded hover:bg-gray-100
+          md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
+          md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white 
+          md:dark:hover:bg-transparent">
+            Log in
+          </a>
         </li>
       </ul>
     </div>
