--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -21,10 +21,10 @@
           </a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100
+          <a href="{{ url_for('main.goods') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100
           md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-blue-500
           dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
-            Pricing
+            Goods
           </a>
         </li>
         <li>
@@ -32,7 +32,15 @@
           md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
           md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white 
           md:dark:hover:bg-transparent">
-           Contact
+           Our staff
+          </a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
+          md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
+          md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white 
+          md:dark:hover:bg-transparent">
+           Our clients
           </a>
         </li>
         <li>
