--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -8,7 +8,7 @@
     <title>Home Page</title>
 </head>
 <body class="flex flex-col min-h-screen">
-    {% include '_header.html' %}
+    {% include 'components/_header.html' %}
 
     <div class="my-auto">
 
