optimization && data hydration

--- a/app/templates/pages/goods.html
+++ b/app/templates/pages/goods.html
@@ -10,7 +10,7 @@
 <body class="flex flex-col min-h-screen">
     {% include 'components/_header.html' %}
 
-    <div class="flex w-full pt-5 justify-center">
+    <div class="flex w-full pt-5 pb-8 justify-center">
         {% include 'components/_goods_table.html' %}
     </div>
 
