--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -1,6 +1,6 @@
-<nav class="border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
+<nav class="sticky top-0 z-10 border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
   <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="#" class="flex items-center space-x-5 rtl:space-x-reverse">
+    <a href="{{ url_for('main.home') }}" class="flex items-center space-x-5 rtl:space-x-reverse">
         <img src="https://i.ibb.co/F6MdYJp/zlagoda-logo.png" class="h-20" alt="Logo" />
         <span class="self-center text-5xl font-semibold whitespace-nowrap dark:text-white">Zlagoda</span>
     </a>
