--- a/app/templates/components/_login_form.html
+++ b/app/templates/components/_login_form.html
@@ -1,7 +1,7 @@
-<div class="flex flex-col self-center justify-center px-6 py-12 lg:px-8">
+<div class="flex flex-col self-center justify-center px-6 py-20 lg:px-8">
   <div class="sm:mx-auto w-3xl sm:w-full sm:max-w-sm">
     <img class="mx-auto h-16 w-auto" src="https://i.ibb.co/F6MdYJp/zlagoda-logo.png" alt="Your Company">
-    <h2 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
+    <h2 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-gray-900">Log in to your account</h2>
   </div>
 
   <div class="mt-10 sm:mx-auto w-3xl sm:w-full sm:max-w-sm">
@@ -26,11 +26,11 @@
       </div>
 
       <div>
-        <button type="SignIn" class="flex w-full h-12 justify-center items-center rounded-md  px-3 py-1.5 
+        <button type="LogIn" class="flex w-full h-12 justify-center items-center rounded-md  px-3 py-1.5 
         bg-cyan-600 text-xl font-semibold text-white shadow-sm hover:bg-sky-600
         focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2
         focus-visible:outline-sky-400">
-         Sign in
+         Log in
         </button>
       </div>
     </form>
