--- a/app/templates/components/_worker_card.html
+++ b/app/templates/components/_worker_card.html
@@ -27,13 +27,12 @@
         <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://i.ibb.co/f93t1mB/user.png" alt="worker image"/>
         <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ worker.name }}</h5>
         <span class="text-sm text-gray-500 dark:text-gray-400">{{ worker.id }}</span>
-        <span class="text-sm text-gray-500 dark:text-gray-400">{{ worker.position }}</span>
-        <span class="text-sm text-gray-500 dark:text-gray-400">Salary: {{ worker.salary }}</span>
-        <span class="text-sm text-gray-500 dark:text-gray-400">Phone number: {{ worker.phone_number }}</span>
-        <div class="flex mt-4 md:mt-6">
-            <a href="#" class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add friend</a>
-            <a href="#" class="py-2 px-4 ms-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Message</a>
-        </div>
+        <span class="text-sm text-gray-500 dark:text-gray-400">{{ worker.phone_number }}</span>
+        <span class="text-sm text-gray-500 dark:text-gray-400">Employment: {{ worker.employment_date }}</span>
+        <span class="text-sm text-gray-500 dark:text-gray-400">Birthday: {{ worker.birth_date }}</span>
+        <span class="text-sm text-gray-500 dark:text-gray-400">Position: {{ worker.position }}</span>
+        <span class="text-sm text-gray-500 dark:text-gray-400">Address: {{ worker.address }}</span>
+        <span class="mt-2 text-lg text-gray-500 dark:text-gray-400">Salary: {{ worker.salary }}</span>
     </div>
 </div>
 {% endfor %}
