goods_and_categories view, flask embedded navigation

--- a/app/templates/components/_workers_topbar.html
+++ b/app/templates/components/_workers_topbar.html
@@ -4,9 +4,10 @@
             <div class="text-xl w-3/4">
                 Our workers
                 <p class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">
-                    Our supermarket offers a wide range of products. Explore our selection, where the finest goods are curated with care, 
-                    ensuring that every choice is a step towards unparalleled culinary experiences. 
-                    Discover the difference with us, where quality isn't just a promise—it's our guarantee.
+                    Meet the heart and soul of our supermarket—our dedicated team of employees and workers. 
+                    Each member brings their passion for service and a wealth of expertise, 
+                    ensuring your shopping experience is nothing short of exceptional.Committed to excellence, 
+                    they embody our values of quality, integrity, and community. 
                 </p>
                 <div class="py-5 bg-white dark:bg-gray-900">
                     {% include 'components/_search_input.html' %}
