--- a/app/templates/pages/goods_and_categories.html
+++ b/app/templates/pages/goods_and_categories.html
@@ -22,31 +22,23 @@
             </div>
             <ul class="hidden text-lg font-medium text-center text-gray-500 divide-x divide-gray-200 rounded-lg sm:flex dark:divide-gray-600 dark:text-gray-400 rtl:divide-x-reverse" id="fullWidthTab" data-tabs-toggle="#fullWidthTabContent" role="tablist">
                 <li class="w-full">
-                    <button id="goods-in-store-tab" data-tabs-target="#goods-in-store" type="button" role="tab" aria-controls="goods-in-store" 
-                    aria-selected="true" class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 rounded-ss-lg bg-gray-50 
-                    hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Goods in store</button>
+                    <a id="goods-in-store-tab" href="{{ url_for('goods_and_categories.goods_in_store') }}" data-tabs-target="#goods-in-store" aria-controls="goods-in-store" 
+                    aria-selected="{{ 'true' if active_tab == 'goods_in_store' else 'false' }}" class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 rounded-ss-lg bg-gray-50 
+                    hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Goods in store</a>
                 </li>
                 <li class="w-full">
-                    <button id="goods-tab" data-tabs-target="#goods" type="button" role="tab" aria-controls="goods" aria-selected="false"
+                    <a id="goods-tab" href="{{ url_for('goods_and_categories.goods') }}" data-tabs-target="#goods" aria-controls="goods" aria-selected="{{ 'true' if active_tab == 'goods' else 'false' }}"
                      class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 bg-gray-50 
-                     hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Goods</button>
+                     hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Goods</a>
                 </li>
                 <li class="w-full">
-                    <button id="categories-tab" data-tabs-target="#categories" type="button" role="tab" aria-controls="categories" 
-                    aria-selected="false" class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 rounded-se-lg 
-                    bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Categories</button>
+                    <a id="categories-tab" href="{{ url_for('goods_and_categories.categories') }}" data-tabs-target="#categories" aria-controls="categories" 
+                    aria-selected="{{ 'true' if active_tab == 'categories' else 'false' }}" class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 rounded-se-lg 
+                    bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Categories</a>
                 </li>
             </ul>
             <div id="fullWidthTabContent" class="border-t border-gray-200 dark:border-gray-600">
-                <div class="hidden p-4 bg-white rounded-lg dark:bg-gray-800" id="goods-in-store" role="tabpanel" aria-labelledby="goods-in-store-tab">                    
-                    {% include 'components/_goods_in_shop_table.html' %}
-                </div>
-                <div class="hidden p-4 bg-white rounded-lg dark:bg-gray-800" id="goods" role="tabpanel" aria-labelledby="goods-tab">
-                    
-                </div>
-                <div class="hidden p-4 bg-white rounded-lg dark:bg-gray-800" id="categories" role="tabpanel" aria-labelledby="categories-tab">
-                    
-                </div>
+                {% include 'components/_data_table.html' %}
             </div>
         </div>
     </div>
