--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -1,4 +1,4 @@
-<nav class="sticky top-0 z-50 border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
+<nav class="sticky top-0 z-50 border-gray-200 bg-gray-100 !bg-opacity-65">
   <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="{{ url_for('main.home') }}" class="flex items-center space-x-5 rtl:space-x-reverse">
         <img src="https://i.ibb.co/F6MdYJp/zlagoda-logo.png" class="h-20" alt="Logo" />
