--- a/app/templates/components/_login_form.html
+++ b/app/templates/components/_login_form.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col self-center justify-center px-6 py-20 lg:px-8">
+<div class="flex flex-col my-auto px-6 py-20 lg:px-8">
   <div class="sm:mx-auto w-3xl sm:w-full sm:max-w-sm">
     <img class="mx-auto h-16 w-auto" src="https://i.ibb.co/F6MdYJp/zlagoda-logo.png" alt="Your Company">
     <h2 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-gray-900">Log in to your account</h2>
