--- a/app/templates/pages/staff_and_clients.html
+++ b/app/templates/pages/staff_and_clients.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="{{ url_for('static', filename='css/dist/styles.css') }}">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
-    <title>Our staff</title>
-</head>
-<body class="flex flex-col min-h-screen">
-    {% include 'components/_header.html' %}
+{% extends "layout.html" %}
 
+{% block title %}Staff and clients{% endblock %}
+
+{% block content %}
+<div class="flex flex-col min-h-screen">
     
     <div class="flex flex-col w-full pt-5 pb-8 items-center justify-center">
         <div class="fixed inset-x-6 top-[-5rem] -z-10 transform-gpu overflow-hidden blur-3xl " aria-hidden="true">
@@ -29,6 +23,5 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-</body>
-</html>
+</div>
+{% endblock %}
