--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -7,7 +7,7 @@
         
         <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-clip blur-3xl sm:-top-80" aria-hidden="true">
             <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr
-                from-[#2bb3d3] to-[#15a297] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" 
+                from-purple-400 via-[#2bb3d3] to-[#15a297] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem] bg-[length:300%_auto] animate-blobs" 
                 style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 
                 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
             </div>
@@ -17,7 +17,8 @@
             
         <h1 class="mb-4 text-3xl text-center font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl">
             Welcome to 
-            <span class="text-6xl md:text-9xl font-extrabold bg-clip-text text-transparent bg-[linear-gradient(to_right,theme(colors.green.300),theme(colors.green.100),theme(colors.sky.400),theme(colors.teal.400),theme(colors.sky.400),theme(colors.cyan.500),theme(colors.green.300))] bg-[length:300%_auto] animate-gradient">«Zlagoda»</span>
+            <span class="text-6xl md:text-9xl font-extrabold bg-clip-text text-transparent 
+            bg-[linear-gradient(to_right,theme(colors.green.300),theme(colors.green.100),theme(colors.sky.400),theme(colors.teal.400),theme(colors.sky.400),theme(colors.cyan.500),theme(colors.green.300))] bg-[length:300%_auto] animate-gradient">«Zlagoda»</span>
             supermarket.
         </h1>
         <p class="text-lg text-center font-normal text-gray-500 lg:text-xl dark:text-gray-400 bg-cy">
@@ -27,7 +28,7 @@
         </div>
 
         <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-clip blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
-        <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#2bb3d3] to-[#0aaa9d] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+        <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-purple-400 via-[#2bb3d3] to-purple-400 opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem] bg-[length:300%_auto] animate-blobs" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
         </div>
 </div>
 {% endblock %}
