data editing scripts + alpine.js framework installation

--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -25,7 +25,6 @@
                             {% else %}
                                 {% include 'components/_default_search_input.html' %}
                             {% endif %}
-
                         </div>
                     </div>
                     <div class="w-1/4 flex flex-col justify-center items-center">
@@ -75,24 +74,30 @@
         </thead>
         <tbody>
             {% for item in items %}
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            <tr x-data="{ editing: false }" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                 {% for key, value in item.items() %}
                     {% if key == 'name' %}
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                            {{ value }}
+                            <span x-show="!editing">{{ value }}</span>
+                            <input x-cloak x-show="editing" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="{{ value }}" />
                         </th>
                     {% else %}
                         <td class="px-6 py-4">
-                            {{ value }}
+                            <span x-show="!editing">{{ value }}</span>
+                            <input x-cloak x-show="editing" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="{{ value }}" />
                         </td>
                     {% endif %}
                 {% endfor %}
                 <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-sky-600 dark:text-blue-500 hover:underline">Edit</a>
+                    <button @click="editing = !editing" class="font-medium text-sky-600 dark:text-blue-500 hover:underline">
+                        <span x-show="!editing">Edit</span>
+                        <span x-cloak x-show="editing">Save</span>
+                    </button>
                 </td>
             </tr>
             {% endfor %}
-            </tbody>
+        </tbody>
+
             
             
     </table>
