--- a/app/templates/components/_login_form.html
+++ b/app/templates/components/_login_form.html
@@ -5,11 +5,11 @@
   </div>
 
   <div class="mt-10 sm:mx-auto w-3xl sm:w-full sm:max-w-sm">
-    <form class="space-y-6" action="#" method="POST">
+    <form class="space-y-6" action="#" method="POST" x-data="{ email: '', password: '' }">
       <div>
         <label for="email" class="block text-lg font-medium leading-6 text-gray-900 dark:text-gray-300">Email address</label>
         <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 text-xl 
+          <input id="email" name="email" type="email" autocomplete="email" x-model="email" required class="block w-full rounded-md border-0 text-xl 
           py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 
           focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500">
         </div>
@@ -23,15 +23,15 @@
           </div>
         </div>
         <div class="mt-2">
-          <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md 
+          <input id="password" name="password" type="password" autocomplete="current-password" x-model="password" required class="block w-full rounded-md 
           border-0 text-xl py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 
           focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500">
         </div>
       </div>
 
       <div>
-        <button type="LogIn" class="flex w-full h-12 justify-center items-center rounded-md  px-3 py-1.5 
-        bg-cyan-600 text-xl font-semibold text-white shadow-sm hover:bg-sky-600
+        <button type="LogIn" :disabled="email === '' || password === ''" class="flex w-full h-12 justify-center items-center rounded-md  px-3 py-1.5 
+        bg-cyan-600 text-xl font-semibold text-white shadow-sm hover:bg-sky-600 disabled:opacity-50
         focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2
         focus-visible:outline-sky-400">
          Log in
