--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -1,6 +1,6 @@
 
 
-    <table class="w-full text-pretty text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <table x-data="AddOrDeleteItem()" class="w-full text-pretty text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <caption class="p-5 text-lg font-semibold text-left rtl:text-right text-gray-900 bg-white dark:text-white dark:bg-gray-800">
             <div class="flex flex-col">
                
@@ -10,6 +10,19 @@
         </caption>
         <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
+
+                <th x-cloak x-show="selecting" scope="col" class="p-4">
+                    <div class="flex items-center">
+                        <input
+                            id="checkbox-all-search"
+                            type="checkbox"
+                            x-model="selectAll"
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                        >
+                        <label for="checkbox-all-search" class="sr-only">checkbox</label>
+                    </div>
+                </th>
+
                 {% for header in items[0].keys() %}
                 
                 <th scope="col" class="px-6 py-3">
@@ -31,6 +44,16 @@
         <tbody>
             {% for item in items %}
             <tr x-data="{ editing: false }" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                <td x-cloak x-show="selecting" class="w-4 p-4">
+                    <div class="flex items-center">
+                        <input
+                            id="checkbox-table-search-1"
+                            type="checkbox"
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                        >
+                        <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                    </div>
+                </td>
                 {% for key, value in item.items() %}
                     {% if key == 'name' %}
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
