--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -1,4 +1,4 @@
-<div x-data="AddOrDeleteItem()" class="flex flex-row">
+<div class="flex flex-row">
     <div class="text-xl w-3/4">
         
         <span x-text="activeTab === 'categories' ? 'Our categories' : 'Our products'"></span>
@@ -21,10 +21,14 @@
             <span x-text="activeTab === 'categories' ? 'Add category' : 'Add product'"></span>
         </button>
 
-        <button class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
-        border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
-        dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
-        dark:hover:bg-gray-700">
+        <button 
+            :id="activeTab === 'categories' ? 'removeCategory' : 'removeProduct'"
+            @click="selecting = !selecting; activeTab === 'categories' ? removeCategory() : removeProduct()"
+            class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
+            border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
+            dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
+            dark:hover:bg-gray-700"
+        >
 
             <span x-text="activeTab === 'categories' ? 'Remove category' : 'Remove product'"></span>
 
