--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -43,7 +43,7 @@
         </thead>
         <tbody>
             {% for item in items %}
-            <tr x-data="{editing: false}" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                 <td x-cloak x-show="selecting" class="w-4 p-4">
                     <div class="flex items-center">
                         <input
