--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -43,7 +43,8 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
     <script type="module" src="{{ url_for('static', filename='js/toast.js') }}" defer></script>
-    <script src="{{ url_for('static', filename='js/post-delete-buttons.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/headerManipulations.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/tableManager.js') }}"></script>
 </body>
 
 </html>
