--- a/app/static/css/toast.css
+++ b/app/static/css/toast.css
@@ -10,7 +10,7 @@
 }
 .notifications {
   position: fixed;
-  top: 30px;
+  bottom: 30px;
   right: 20px;
 }
 .notifications :where(.toast, .column) {
@@ -25,7 +25,7 @@
   border-radius: 4px;
   padding: 16px 17px;
   margin-bottom: 10px;
-  background: var(--light);
+  /* background: var(--light); */
   justify-content: space-between;
   animation: show_toast 0.3s ease forwards;
 }
