--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -44,7 +44,9 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
     <script type="module" src="{{ url_for('static', filename='js/toast.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/headerManipulations.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/tableManager.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/tableState.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/rowComponent.js') }}"></script>
+
 </body>
 
 </html>
