--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -12,7 +12,7 @@
             {% endif %}
         </div>
     </div>
-    <div x-show="!Alpine.store('tableState').selecting" class="w-1/4 flex flex-col justify-center items-center">
+    <div x-show="!Alpine.store('tableState').globalSelectingState" class="w-1/4 flex flex-col justify-center items-center">
             <button
                 :id="activeTab === 'categories' ? 'addCategory' : 'addProduct'"
                 @click="activeTab === 'categories' ? addCategory() : addProduct()"
@@ -37,7 +37,7 @@
 
             </button>
         </div>
-        <div x-cloak x-show="Alpine.store('tableState').selecting" class="w-1/4 flex flex-col justify-center items-center">
+        <div x-cloak x-show="Alpine.store('tableState').globalSelectingState" class="w-1/4 flex flex-col justify-center items-center">
               <button 
                 @click="activeTab === 'categories' ? removeCategory() : removeProduct()"
                 class="w-3/4 h-1/3 py-2.5 px-5 me-2 mb-4 inline-flex items-center justify-center
